label标签自定义在元素下方

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,3 +16,9 @@
 .icon-custom.icon-custom-start {
     background-image: url('https://hexo-blog-1256114407.cos.ap-shenzhen-fsi.myqcloud.com/start.png');
 }
+
+
+/* .djs-direct-editing-parent {
+    top: 130px!important;
+    width: 60px!important;
+} */
